K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openai-img-generate-server-service
spec:
  selector:
    app: openai-img-generate-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
